kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
  namespace: kubernetes-challenge
spec:
  selector:
    app: nodejs
  ports:
    - protocol: TCP
      port: 8080
      targetPort: http
